wui rut bugun ziyaret baslatma slsref kendisi, main css select2 z-index arkaya

--- a/Sultanlar/Sultanlar.WUI/wwwroot/css/main.css
+++ b/Sultanlar/Sultanlar.WUI/wwwroot/css/main.css
@@ -837,6 +837,10 @@ table tr.even:hover {
     padding: 8px 24px 6px 12px !important;
 }
 
+.select2-dropdown {
+    z-index: 1025 !important;
+}
+
 select {
     font-size: 0.85rem;
     padding: 8px 8px 8px 12px;
